Serve frontend via simple Go server

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,9 @@
     <title>Koto</title>
   </head>
   <body>
+      <script>
+        window.apiEndpoint = "http://localhost:12001";
+      </script>
 	  <div id="root"></div>
 	  <div id="modal"></div>
   </body>
