#69 reworked the demo

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,4 +16,9 @@
 	  <div id="root"></div>
 	  <div id="modal"></div>
   </body>
+  <style type="text/css">
+    .awssld__content {
+      background:none;
+    }
+  </style>
 </html>
