--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,5 +20,8 @@
     .awssld__content {
       background:none;
     }
+    img {
+      image-orientation: from-image;
+    }
   </style>
 </html>
